@startuml singleton

class HeroAircraft {
    - {static} instance : HeroAircraft
    - power : int
    - direction : int
    - HeroAircraft(locationX, locationY, speedX, speedY, hp)
    + {static} getInstance() : HeroAircraft
    + {static} getInstance(locationX, locationY, speedX, speedY, hp) : HeroAircraft
    + shoot() : List<BaseBullet>
}

class GameTemplate {
    # heroAircraft : HeroAircraft
}

GameTemplate --> HeroAircraft : uses
HeroAircraft --> HeroAircraft : instance

note right of HeroAircraft
  单例模式
  私有构造函数
  静态实例
end note

@enduml